[project]
name = "podcast-cli"
version = "0.1.0"
description = "Generate text-to-speech podcasts from Wikipedia articles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "wikipedia-api>=0.6.0",
    "openai>=1.0.0",
    "elevenlabs>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydub>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
